--- a/templates/transport/edit.html.twig
+++ b/templates/transport/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Transport</h1>
 
-    {{ include('transport/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('transport/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     <a href="{{ path('app_transport_index') }}">back to list</a>
 
