--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -9,7 +9,7 @@
 	</div>
 </nav>
 <div class="last-participation my-5">
-	<h2>Dernières  participations :</h2>
+	<h2>Participations :</h2>
 	<table class="table">
 		<thead class="table-dark">
 			<tr>
@@ -94,8 +94,8 @@
 </div>
 {% if app.user.roles[0] == "ROLE_ORGA" %}
 	<div class="last-event my-5">
-		<h2>Derniers évènement organiser :</h2>
-		<table class="table">
+		<h2>Evènement organiser :</h2>
+		<table class="table table-sm">
 			<thead class="table-dark">
 				<tr>
 					<th>Status</th>
@@ -105,43 +105,46 @@
 					<th>Lieu</th>
 					<th>Tarif</th>
 					<th>Date de Creation</th>
+					<th>Nombre Inscription</th>
 					<th>Nombre de visite</th>
 					<th>actions</th>
 				</tr>
 			</thead>
 			<tbody>
-				{% for evenement in evenements %}
-					{% if evenement.user.id is same as app.user.id %}
-						<tr>
-							<td>
-								<span 
-								{% if evenement.statusEvenement == 'En attente de validation' %} 
-									class="btn btn-secondary">
-								{% else %}
-									class="btn btn-success">
-								{% endif %}
-									{{ evenement.statusEvenement }}
-								</span>
-							</td>
-							<td>{{ evenement.nomEvenement }} <a href="{{ path('event_csv', {'id' : evenement.id}) }}">csv</a></td>
-							<td>{{ evenement.dateEvenement ? evenement.dateEvenement|date('d-m-Y') : '' }}</td>
-							<td>{{ evenement.villeEvenement }}</td>
-							<td>{{ evenement.nomLieu }}</td>
-							<td>{{ evenement.tarifEvenement }}€</td>
-							<td>{{ evenement.dateCreation ? evenement.dateCreation|date('d-m-Y') : '' }}</td>
-							<td>{{ compteurs[evenement.id]['total'] }}</td>
-							<td>
-								<a class="btn btn-info" href="{{ path('app_evenement_show', {'id': evenement.id}) }}">voir</a>
-								<a class="btn btn-secondary" href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">modifier</a>
-							</td>
-						</tr>
+			{% for evenement in evenements %}
+			{% if evenement.user.id is same as app.user.id %}
+				<tr>
+					<td class="align-middle">
+						<span 
+						{% if evenement.statusEvenement == 'En attente de validation' %} 
+							class="btn btn-secondary btn-sm">
+						{% else %}
+							class="btn btn-success btn-sm">
+						{% endif %}
+							{{ evenement.statusEvenement }}
+						</span>
+					</td>
+					<td>{{ evenement.nomEvenement }}</td>
+					<td>{{ evenement.dateEvenement ? evenement.dateEvenement|date('d-m-Y') : '' }}</td>
+					<td>{{ evenement.villeEvenement }}</td>
+					<td>{{ evenement.nomLieu }}</td>
+					<td>{{ evenement.tarifEvenement }}€</td>
+					<td>{{ evenement.dateCreation ? evenement.dateCreation|date('d-m-Y') : '' }}</td>
+					<td>{{ nbreParticipations[evenement.id] }}</td>
+					<td>{{ compteurs[evenement.id]['total'] }}</td>
+					<td>
+						<a class="btn btn-info m-2" href="{{ path('app_evenement_show', {'id': evenement.id}) }}">voir</a>
+						<a class="btn btn-secondary m-2" href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">modifier</a>
+						<a class="btn btn-primary m-2" href="{{ path('event_csv', {'id' : evenement.id}) }}">csv</a>
+					</td>
+				</tr>
+			</tbody>
 					{% endif %}
 				{% else %}
-			</tbody>
-	<tr>
-		<td colspan="14">Aucun historique</td>
-	</tr>
-{% endfor %}</tbody></table></div>{% endif %}<div class="last-reservation my-5"><h2>Dernieres réservation de transport :</h2><table class="table"><thead class="table-dark"><tr>
+			<tr>
+				<td colspan="14">Aucun historique</td>
+			</tr>
+{% endfor %}</tbody></table></div>{% endif %}<div class="last-reservation my-5"><h2>Réservation de transport :</h2><table class="table"><thead class="table-dark"><tr>
 <th>Date de Reservation</th>
 <th>Evenement lié</th>
 <th>Prix de la place</th>
@@ -207,7 +210,7 @@
 </tr>{% else %}
 <tr>
 	<td colspan="3">no records found</td>
-</tr>{% endfor %}</tbody></table></div><div class="last-transport my-5"><h2>Dernier transport proposer</h2><table class="table"><thead class="table-dark"><tr>
+</tr>{% endfor %}</tbody></table></div><div class="last-transport my-5"><h2>Transport proposer</h2><table class="table"><thead class="table-dark"><tr>
 <th>Statut</th>
 <th>Tarif</th>
 <th>Contact</th>
@@ -215,6 +218,7 @@
 <th>Lieu de Depart</th>
 <th>Place</th>
 <th>Paiement</th>
+<th>Nombre de Réservation</th>
 <th>actions</th></tr></thead><tbody>{% for transport in transports %}
 {% if transport.user.id is same as app.user.id %}
 	<tr>
@@ -228,6 +232,7 @@
 		<td>{{ transport.LieuDepart }}</td>
 		<td>{{ transport.NbPlace }}</td>
 		<td>{{ transport.InfoPaiement }}</td>
+		<td>{{ nbreReservations[transport.id] }}</td>
 		<td>
 			<a class="btn btn-info" href="{{ path('app_transport_show', {'id': transport.id}) }}">voir</a>
 			<a class="btn btn-secondary" href="{{ path('app_transport_edit', {'id': transport.id}) }}">modifier</a>
