--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -11,7 +11,6 @@
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>Avatar</th>
                 <th>DateCreationUser</th>
                 <th>actions</th>
@@ -22,8 +21,13 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
+                {% if user.roles is same as ["ROLE_ORGA","ROLE_USER"] %}
+                <td>Organisateur</td>
+                {% elseif user.roles is same as ["ROLE_ADMIN","ROLE_ORGA","ROLE_USER"] %}
+                <td>Admin</td>
+                {% else  %}
+                <td>Utilisateur</td>
+                {% endif %}
                 <td>{{ user.avatar }}</td>
                 <td>{{ user.DateCreationUser ? user.DateCreationUser|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
