mise en page tableau  event

--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -15,7 +15,7 @@
 		<div class="couverture d-flex justify-content-center">
 			<img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '')}}">
 		</div>
-		<table class="table">
+		<table class="table border border-warning my-5">
 			<tbody>
 				<tr>
 					<th>Heure de début</th>
