--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block body %}
-{# {{ form_start(form) }}
-<div class="form-control">
-    <i class="fa fa-calendar"></i> {{ form_label(form.searchName) }}
-    {{ form_widget(form.searchName) }}
-	<button type="submit">Rechercher</button>
-</div>
-{{ form_end(form) }} #}
+	{# {{ form_start(form) }}
+																		<div class="form-control">
+																		    <i class="fa fa-calendar"></i> {{ form_label(form.searchName) }}
+																		    {{ form_widget(form.searchName) }}
+																			<button type="submit">Rechercher</button>
+																		</div>
+																		{{ form_end(form) }} #}
 	{% for message in app.flashes('success') %}
 		<div class="alert alert-success">
 			{{ message }}
@@ -44,7 +44,7 @@
 							<img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '') }}" alt="" style="height:230px"/>
 							<div class="card-body">
 								<h5 class="card-title">{{ image.evenement.nomEvenement }}</h5>
-								<h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
+								<h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('d/m/Y') : '' }}</h6>
 								<p class="card-text">{{ image.evenement.descriptif[:80] ~ (image.evenement.descriptif|length > 80 ? '…' ) }}
 								</p>
 								<a href="{{ path('app_home_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
